<resources>
    <string name="app_name">SecondKotlinClass</string>
    <string name="text1">Text1</string>
    <string name="text2">Text2</string>
    <string name="text3">Text3</string>
    <string name="text4">Text4</string>
    <string name="btnMove">Move</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="date">Date</string>
    <string name="person_name">Person Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="get_permission">Get Permission</string>
    <string name="get_mul_permissions">Get Multiple Permissions</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
</resources>